# shibabot

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/bot/: core.hpp  discordFE.hpp  userManager.hpp
include/commands/core/: echo.hpp  ping.hpp
include/types/: discordtypes.hpp  types.hpp
shiba/: utils.cpp  utils.hpp
shiba/commands/core/: debug.hpp  echo.hpp  ping.hpp
shiba/commands/info/: command.hpp  help.hpp  module.hpp  modules.hpp
shiba/commands/management/: claimToken.hpp  enable.hpp  generateToken.hpp  save.hpp  stop.hpp
shiba/core/: core.cpp  core.hpp  userManager.cpp  userManager.hpp
shiba/frontends/: discordFE.cpp  discordFE.hpp  discordTypes.cpp  discordtypes.hpp
shiba/modules/: genericCommandModule.cpp  genericCommandModule.hpp
shiba/perm/: perm.cpp  perm.hpp
shiba/types/: command.hpp  frontend.hpp  message.hpp  module.hpp  user.hpp
src/: utils.cpp
src/bot/: core.cpp  discordFE.cpp  userManager.cpp
